--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -197,6 +197,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', end
                 </h2>
             </div>
             <div class="block-tags">
+                    <span class="tag">
+                        <a href="/kapacitanemocnic?utm_source=homepage&utm_medium=line&utm_campaign=kapacitanemocnic">
+                            Volné kapacity intenzivní péče v nemocnicích
+                        </a>
+                    </span>
 
                 @foreach (var wp in HlidacStatu.Lib.StaticData.LastBlogPosts
                     .Get()
