--- a/Web.Statu/Views/Home/KapacitaNemocnic.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic.cshtml
@@ -31,6 +31,10 @@
         h4 {
             color: #31708f
         }
+          .singlebox {
+              border-right: 1px #d0d0d0 solid;
+              border-top: 2px #d0d0d0 double;
+          }
     </style>
 }
 
