--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -10,7 +10,9 @@
 
     NemocniceData firstKraje = Model.dny.First().PoKrajich();
     NemocniceData lastKraje = Model.dny.Last().PoKrajich();
-    NemocniceData diffKraje = Model.diffK.PoKrajich(); }
+    NemocniceData diffKraje = Model.diffK.PoKrajich();
+        
+    }
 
 
 <div class="jumbotron">
@@ -161,7 +163,10 @@ tbl_nem_o = $('#nem_o').DataTable({
 
 <hr />
 <h2 id="opendata">Open Data</h2>
-<a href="/KapacitaNemocnicData" target="_blank">Open data (json)</a>
+<ul>
+    <li><a href="/KapacitaNemocnicData" target="_blank">Všechna data</a></li>
+    <li><a href="/KapacitaNemocnicData/last" target="_blank">Aktuální stav (nejnovější záznam)</a></li>
+</ul>
 
 
 @functions { public string TColor(int val)
@@ -193,106 +198,175 @@ var chartdata = timedata.Select(m => new
 <h2 id="@h.region">@h.name</h2>
 
 
-                <div class="row">
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Lůžka (ARO+JIP dospělí)</h4>
-                        <p>
-                            Celkem @h.AROJIP_luzka_celkem, volných @(h.AROJIP_luzka_covid+h.AROJIP_luzka_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.AROJIP_perc()))
-                            <br />
-                            Volná lůžka: COVID <span style="font-size:125%;font-weight:bold">@h.AROJIP_luzka_covid</span> / neCOVID <span style="font-size:125%">@h.AROJIP_luzka_necovid</span>
-                            <br />
-                            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.AROJIP_luzka_covid)">@(diffH.AROJIP_luzka_covid.ToString("+#;-#;0"))</span> / <span style="font-weight:normal;color:@TColor(diffH.AROJIP_luzka_necovid)">@(diffH.AROJIP_luzka_necovid.ToString("+#;-#;0"))</span>
-                        </p>
-                        <p>
-                            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
-                                    (name:"volná COVID lůžka", 
-                                     values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_covid } )
-                                    ),
-                                    (name:"volná neCOVID lůžka", 
-                                     values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_necovid } )
-                                    )
-                                },
-                                "","počet",200 )
-                        </p>
-                    </div>
-                    <div class="clearfix hidden-md hidden-lg"></div>
+<div class="row">
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Lůžka (ARO+JIP dospělí)</h4>
+        <p>
+            Celkem @h.AROJIP_luzka_celkem, volných @(h.AROJIP_luzka_covid+h.AROJIP_luzka_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.AROJIP_perc()))
+            <br />
+            Volná lůžka: COVID <span style="font-size:125%;font-weight:bold">@h.AROJIP_luzka_covid</span> / neCOVID <span style="font-size:125%">@h.AROJIP_luzka_necovid</span>
+            <br />
+            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.AROJIP_luzka_covid)">@(diffH.AROJIP_luzka_covid.ToString("+#;-#;0"))</span> / <span style="font-weight:normal;color:@TColor(diffH.AROJIP_luzka_necovid)">@(diffH.AROJIP_luzka_necovid.ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"ARO+JIP volná COVID lůžka", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_covid } )
+                    ),
+                    (name:"ARO+JIP volná neCOVID lůžka", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_necovid } )
+                    )
+                },
+                "","počet",200 )
+        </p>
+    </div>
+    <div class="clearfix hidden-md hidden-lg"></div>
 
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Lůžka (standardní s kyslíkem)</h4>
-                        <p>
-                            Celkem @h.Standard_luzka_s_kyslikem_celkem, volných @(h.Standard_luzka_s_kyslikem_covid+h.Standard_luzka_s_kyslikem_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.Standard_luzka_s_kyslikem_perc()))
-                            <br />
-                            Volná lůžka: COVID <span style="font-size:125%;font-weight:bold">@h.Standard_luzka_s_kyslikem_covid</span> / neCOVID <span style="font-size:125%">@h.Standard_luzka_s_kyslikem_necovid</span>
-                            <br />
-                            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.Standard_luzka_s_kyslikem_covid)">@(diffH.Standard_luzka_s_kyslikem_covid.ToString("+#;-#;0"))</span> / <span style="font-weight:normal;color:@TColor(diffH.Standard_luzka_s_kyslikem_necovid)">@(diffH.Standard_luzka_s_kyslikem_necovid.ToString("+#;-#;0"))</span>
-                        </p>
-                    </div>
-                    <div class="clearfix hidden-md hidden-lg"></div>
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Lůžka (standardní s kyslíkem)</h4>
+        <p>
+            Celkem @h.Standard_luzka_s_kyslikem_celkem, volných @(h.Standard_luzka_s_kyslikem_covid+h.Standard_luzka_s_kyslikem_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.Standard_luzka_s_kyslikem_perc()))
+            <br />
+            Volná lůžka: COVID <span style="font-size:125%;font-weight:bold">@h.Standard_luzka_s_kyslikem_covid</span> / neCOVID <span style="font-size:125%">@h.Standard_luzka_s_kyslikem_necovid</span>
+            <br />
+            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.Standard_luzka_s_kyslikem_covid)">@(diffH.Standard_luzka_s_kyslikem_covid.ToString("+#;-#;0"))</span> / <span style="font-weight:normal;color:@TColor(diffH.Standard_luzka_s_kyslikem_necovid)">@(diffH.Standard_luzka_s_kyslikem_necovid.ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"volná COVID lůžka s kyslíkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Standard_luzka_s_kyslikem_covid} )
+                    ),
+                    (name:"volná neCOVID lůžka s kyslíkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Standard_luzka_s_kyslikem_necovid} )
+                    )
+                },
+                "","počet",200 )
+        </p>
+    </div>
+    <div class="clearfix hidden-md hidden-lg"></div>
 
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Přístroje ECMO <small>podpora nejvaznejsich pripadu, plicni rizeni</small></h4>
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Přístroje ECMO <small>podpora nejvaznejsich pripadu, plicni rizeni</small></h4>
 
-                        <p>
-                            Celkem @h.ECMO_celkem, volných: @h.ECMO_volna (@HlidacStatu.Util.RenderData.NicePercent(h.ECMO_perc()))
-                            <br />
-                            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.ECMO_volna)">@(diffH.ECMO_volna.ToString("+#;-#;0"))</span>
-                        </p>
-                    </div>
-                                        <div class="clearfix hidden-md hidden-lg"></div>
+        <p>
+            Celkem @h.ECMO_celkem, volných: @h.ECMO_volna (@HlidacStatu.Util.RenderData.NicePercent(h.ECMO_perc()))
+            <br />
+            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.ECMO_volna)">@(diffH.ECMO_volna.ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"Přístroje ECMO celkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.ECMO_celkem } )
+                    ),
+                    (name:"Přístroje ECMO volné", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.ECMO_volna } )
+                    )
+                },
+                "","počet",200 )
+        </p>
+    </div>
+                        <div class="clearfix hidden-md hidden-lg"></div>
 
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Přístroje UPV <small>Umělá plicni ventilace</small></h4>
-                        <p>
-                            Celkem @h.UPV_celkem, volných: @h.UPV_volna (@HlidacStatu.Util.RenderData.NicePercent(h.UPV_perc()))
-                            <br />
-                            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.UPV_volna)">@(diffH.UPV_volna.ToString("+#;-#;0"))</span>
-                        </p>
-                    </div>
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Přístroje UPV <small>Umělá plicni ventilace</small></h4>
+        <p>
+            Celkem @h.UPV_celkem, volných: @h.UPV_volna (@HlidacStatu.Util.RenderData.NicePercent(h.UPV_perc()))
+            <br />
+            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.UPV_volna)">@(diffH.UPV_volna.ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"Přístroje UPV celkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.UPV_celkem } )
+                    ),
+                    (name:"Přístroje UPV volné", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.UPV_volna } )
+                    )
+                },
+                "","počet",200 )
+        </p>
 
-                    <div class="clearfix"></div>
+    </div>
 
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Přístroje CRRT <small>kontinuální dialýza</small></h4>
-                        <p>
-                            Celkem @h.CRRT_celkem, volných: @h.CRRT_volna (@HlidacStatu.Util.RenderData.NicePercent(h.CRRT_perc()))
-                            <br />
-                            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.CRRT_volna)">@(diffH.CRRT_volna.ToString("+#;-#;0"))</span>
-                        </p>
-                    </div>
-                                        <div class="clearfix hidden-md hidden-lg"></div>
+    <div class="clearfix"></div>
 
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Lékaři <small>ARO+JIP dospělí</small></h4>
-                        <p>
-                            Celkem @h.Lekari_AROJIP_celkem
-                            <br />
-                            Změna počtu od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.Lekari_AROJIP_celkem)">@(diffH.Lekari_AROJIP_celkem.ToString("+#;-#;0"))</span>
-                        </p>
-                    </div>
-                    <div class="clearfix hidden-md hidden-lg"></div>
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Přístroje CRRT <small>kontinuální dialýza</small></h4>
+        <p>
+            Celkem @h.CRRT_celkem, volných: @h.CRRT_volna (@HlidacStatu.Util.RenderData.NicePercent(h.CRRT_perc()))
+            <br />
+            Změna volných od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.CRRT_volna)">@(diffH.CRRT_volna.ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"Přístroje CRRT celkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.CRRT_celkem } )
+                    ),
+                    (name:"Přístroje CRRT volné", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.CRRT_volna } )
+                    )
+                },
+                "","počet",200 )
+        </p>
+    </div>
+                        <div class="clearfix hidden-md hidden-lg"></div>
 
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Sestry <small>ARO+JIP dospělí</small></h4>
-                        <p>
-                            Celkem @h.Sestry_AROJIP_celkem
-                            <br />
-                            Změna počtu od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.Sestry_AROJIP_celkem)">@(diffH.Sestry_AROJIP_celkem.ToString("+#;-#;0"))</span>
-                        </p>
-                    </div>
-                                        <div class="clearfix hidden-md hidden-lg"></div>
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Lékaři <small>ARO+JIP dospělí</small></h4>
+        <p>
+            Celkem @h.Lekari_AROJIP_celkem
+            <br />
+            Změna počtu od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.Lekari_AROJIP_celkem)">@(diffH.Lekari_AROJIP_celkem.ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"Lékaři ARO+JIP celkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Lekari_AROJIP_celkem} )
+                    )
+                },
+                "","počet",200 )
+        </p>
+    </div>
+    <div class="clearfix hidden-md hidden-lg"></div>
 
-                    <div class="col-xs-12 col-sm-3" style="border-right:1px #d0d0d0 solid">
-                        <h4>Dostupné ventilátory <small>přenosné + operační sál</small></h4>
-                        <p>
-                            Celkem @(h.Ventilatory_prenosne_celkem+h.Ventilatory_operacnisal_celkem)
-                            <br />
-                            Změna počtu od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor((diffH.Ventilatory_prenosne_celkem+diffH.Ventilatory_operacnisal_celkem))">@((h.Ventilatory_prenosne_celkem+h.Ventilatory_operacnisal_celkem).ToString("+#;-#;0"))</span>
-                        </p>
-                    </div>
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Sestry <small>ARO+JIP dospělí</small></h4>
+        <p>
+            Celkem @h.Sestry_AROJIP_celkem
+            <br />
+            Změna počtu od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor(diffH.Sestry_AROJIP_celkem)">@(diffH.Sestry_AROJIP_celkem.ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"Sestry ARO+JIP celkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Sestry_AROJIP_celkem} )
+                    )
+                },
+                "","počet",200 )
+        </p>
+    </div>
+                        <div class="clearfix hidden-md hidden-lg"></div>
 
-                    <div class="clearfix"></div>
+    <div class="col-xs-12 col-sm-3 singlebox">
+        <h4>Dostupné ventilátory <small>přenosné + operační sál</small></h4>
+        <p>
+            Celkem @(h.Ventilatory_prenosne_celkem+h.Ventilatory_operacnisal_celkem)
+            <br />
+            Změna počtu od @first.lastUpdated.ToString("dd.MM."): <span style="font-weight:normal;color:@TColor((diffH.Ventilatory_prenosne_celkem+diffH.Ventilatory_operacnisal_celkem))">@((h.Ventilatory_prenosne_celkem+h.Ventilatory_operacnisal_celkem).ToString("+#;-#;0"))</span>
+        </p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"Dostupné ventilátory přenosné+oper.sál", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Ventilatory_prenosne_celkem+m.data.Ventilatory_operacnisal_celkem } )
+                    )
+                },
+                "","počet",200 )
+        </p>
+    </div>
 
-                </div>
-                <hr />
+    <div class="clearfix"></div>
+
+</div>
+<hr />
    
 }
