--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -24,7 +24,7 @@
     </h2>
     <p>
         Data ÚZIS, která Ministerstvo zdravotnictví tají nejen před veřejností, ale pouze omezeně k nim mají přístup i dispečinky záchranných služeb,
-        nemocnice a lékaři.
+        nemocnice a lékaři.<span style="color:red">Od 22.9. 9:00 opět ÚZIS data blokuje.</span>
     </p>
     <p>
         Záchranky tato data mají teprve od pondělí, doktoři na JIP je stále nemají a místa pro pacienty obvolávají telefony. A velké nemocnice COVID pacienty odmítají, i když mají volná místa. 
