--- a/Web.Statu/Views/Kindex/Detail_child.cshtml
+++ b/Web.Statu/Views/Kindex/Detail_child.cshtml
@@ -107,7 +107,7 @@
 
                                 if (kidx != null && kidx.KIndexReady && year != selectedYear)
                                 {
-                                    <span><a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
+                                    <span title="@HlidacStatu.Util.RenderData.NiceNumber(kidx.KIndex)"><a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
 
                                 }
                             }
@@ -130,7 +130,7 @@ else
     <div class="container">
         <h2 style="padding-top:0;margin-top:0;margin-bottom:30px"><a href="/subjekt/@Model.Ico"><b>@firma.Jmeno</b></a> za rok <b>@ViewBag.SelectedYear</b></h2>
         <div class="row" style="display: flex;align-items: center;">
-            <div class="col-sm-2">
+            <div class="col-sm-2" title="@HlidacStatu.Util.RenderData.NiceNumber(currYear.KIndex)">
                 @Html.KIndexIcon(currYear.KIndexLabel, "width:100px")
             </div>
             <div class="col-sm-10">
@@ -158,7 +158,7 @@ else
 
                             if (kidx != null && kidx.KIndexReady && year != selectedYear)
                             {
-                                <span><a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
+                                <span title="@HlidacStatu.Util.RenderData.NiceNumber(kidx.KIndex)"><a href="@ViewBag.ICO?rok=@year">@Html.KIndexIcon(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
 
                             }
                         }
